@@ -4,7 +4,6 @@
  *
  * Created on 1. März 2007, 12:51
  */
-
 package org.softsmithy.lib.io;
 
 import junit.framework.*;
@@ -16,7 +15,7 @@ import java.util.*;
  * @author brunner
  */
 public class FilesTest extends TestCase {
-    
+
     public FilesTest(String testName) {
         super(testName);
     }
@@ -32,13 +31,13 @@ public class FilesTest extends TestCase {
      */
     public void testGetExtension() {
         System.out.println("getExtension");
-        
+
         File f = null;
-        
+
         String expResult = "";
         String result = Files.getExtension(f);
         assertEquals(expResult, result);
-        
+
         // TODO review the generated test code and remove the default call to fail.
         fail("The test case is a prototype.");
     }
@@ -48,13 +47,13 @@ public class FilesTest extends TestCase {
      */
     public void testGetFirstName() {
         System.out.println("getFirstName");
-        
+
         File f = null;
-        
+
         String expResult = "";
         String result = Files.getFirstName(f);
         assertEquals(expResult, result);
-        
+
         // TODO review the generated test code and remove the default call to fail.
         fail("The test case is a prototype.");
     }
@@ -64,13 +63,13 @@ public class FilesTest extends TestCase {
      */
     public void testGetName() {
         System.out.println("getName");
-        
+
         File f = null;
-        
+
         String expResult = "";
         String result = Files.getName(f);
         assertEquals(expResult, result);
-        
+
         // TODO review the generated test code and remove the default call to fail.
         fail("The test case is a prototype.");
     }
@@ -80,13 +79,13 @@ public class FilesTest extends TestCase {
      */
     public void testReadLines() throws Exception {
         System.out.println("readLines");
-        
+
         File file = null;
-        
+
         String[] expResult = null;
         String[] result = Files.readLines(file);
         assertEquals(expResult, result);
-        
+
         // TODO review the generated test code and remove the default call to fail.
         fail("The test case is a prototype.");
     }
@@ -96,9 +95,9 @@ public class FilesTest extends TestCase {
      */
     public void testDelete() throws IOException {
         System.out.println("delete");
-        
+
         File dir;
-        do{
+        do {
             dir = new File(System.getProperty("java.io.tmpdir"), "filesTest-" + Calendar.getInstance().getTimeInMillis());
         } while (dir.exists());
         dir.mkdirs();
@@ -110,12 +109,12 @@ public class FilesTest extends TestCase {
         file1.createNewFile();
         File file2 = new File(dir1, "file2");
         file2.createNewFile();
-        
+
 
         boolean result = Files.delete(dir, true);
         assertTrue(result);
         assertFalse(dir.exists());
-        
+
     }
 
     /**
@@ -123,13 +122,44 @@ public class FilesTest extends TestCase {
      */
     public void testGetPathNames() {
         System.out.println("getPathNames");
-        
+
         File path = new File(new File("path1", "path2"), "path3");
-        
+
         String[] expResult = new String[]{"path1", "path2", "path3"};
-        String[] result = Files.getPathNames(path);
-        assertTrue(Arrays.equals(expResult, result));
+        String[] result1 = Files.getPathNames(path);
+        assertTrue(Arrays.equals(expResult, result1));
         
+        File absolutePath = new File(File.listRoots()[0], path.toString());
+        String[] result2 = Files.getPathNames(absolutePath);
+        assertTrue(Arrays.equals(expResult, result2));
+       
+        assertEquals(path, Files.getFile(Files.getRoot(path), Files.getPathNames(path)));
+        
+        assertEquals(absolutePath, Files.getFile(Files.getRoot(absolutePath), Files.getPathNames(absolutePath)));
+
+    }
+
+    public void testGetRoot() {
+        File expectedRoot = File.listRoots()[0];
+
+        File root1 = Files.getRoot(expectedRoot);
+        assertEquals(expectedRoot, root1);
+
+        File root2 = Files.getRoot(new File(expectedRoot, "foo"));
+        assertEquals(expectedRoot, root2);
+        
+        File root3 = Files.getRoot(new File(new File(expectedRoot, "foo"), "bar"));
+        assertEquals(expectedRoot, root3);
+        
+        File root4 = Files.getRoot(new File("bar"));
+        assertEquals(null, root4);
     }
     
+    public void testGetFile1(){
+        fail();
+    }
+    
+    public void testGetFile2(){
+        fail();
+    }
 }
